add setup intelli